# rust

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  palette.yml  publish.yml  release-plz.yml
examples/: bevy.rs  css.rs  custom_flavor.rs  grid.rs  iced.rs  ratatui.rs  serde.rs  simple.rs  term.rs  term_grid.rs
src/: colour.rs  flavour.rs  flavour_colours.rs  generated_palette.rs  lib.rs  palette.rs
