[package]
name = "catppuccin"
version = "2.5.1"
authors = ["Catppuccin Org <releases@catppuccin.com>"]
edition = "2021"
description = "🦀 Soothing pastel theme for Rust."
documentation = "https://docs.rs/catppuccin"
homepage = "https://github.com/catppuccin/rust"
repository = "https://github.com/catppuccin/rust"
license = "MIT"
keywords = ["catppuccin", "palette", "color", "colorscheme", "theme"]

[package.metadata.docs.rs]
all-features = true

[lints]
rust.missing_docs = "warn"
clippy.all = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"

[dependencies]
ansi_term = { version = "0.12.1", optional = true }
css-colors = { version = "1.0.1", optional = true }
ratatui = { version = "0.29.0", optional = true }
serde = { version = "1.0.203", features = ["derive"], optional = true }

[build-dependencies]
itertools = "0.14.0"
prettyplease = "0.2.20"
proc-macro2 = "1.0.84"
quote = "1.0.36"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
syn = "2.0.66"

[dev-dependencies]
crossterm = "0.29.0"
serde_json = "1.0.117"

[features]
ansi-term = ["dep:ansi_term"]
css-colors = ["dep:css-colors"]
ratatui = ["dep:ratatui"]
serde = ["dep:serde"]

[[example]]
name = "css"
required-features = ["css-colors"]

[[example]]
name = "term_grid"
required-features = ["ansi-term"]

[[example]]
name = "ratatui"
required-features = ["ratatui"]
