[package]
name = "catppuccin"
version = "2.5.1"
authors = ["Catppuccin Org <releases@catppuccin.com>"]
edition = "2021"
description = "🦀 Soothing pastel theme for Rust."
documentation = "https://docs.rs/catppuccin"
homepage = "https://github.com/catppuccin/rust"
repository = "https://github.com/catppuccin/rust"
license = "MIT"
keywords = ["catppuccin", "palette", "color", "colorscheme", "theme"]

[package.metadata.docs.rs]
all-features = true

[lints]
rust.missing_docs = "warn"
clippy.all = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"

[dependencies]
ansi_term = { version = "0.12", optional = true }
bevy = { version = "0.17", optional = true }
css-colors = { version = "1.0", optional = true }
ratatui = { version = "0.29", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
itertools = "0.14.0"
prettyplease = "0.2.37"
proc-macro2 = "1.0.101"
quote = "1.0.41"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
syn = "2.0.106"

[dev-dependencies]
crossterm = "0.29.0"
serde_json = "1.0.145"

[features]
ansi-term = ["dep:ansi_term"]
css-colors = ["dep:css-colors"]
ratatui = ["dep:ratatui"]
serde = ["dep:serde"]
bevy = ["dep:bevy"]

[[example]]
name = "css"
required-features = ["css-colors"]

[[example]]
name = "term_grid"
required-features = ["ansi-term"]

[[example]]
name = "ratatui"
required-features = ["ratatui"]

[[example]]
name = "bevy"
required-features = ["bevy"]
