[package]
name = "catppuccin"
version = "2.5.1"
authors = ["Catppuccin Org <releases@catppuccin.com>"]
edition = "2021"
description = "🦀 Soothing pastel theme for Rust."
documentation = "https://docs.rs/catppuccin"
homepage = "https://github.com/catppuccin/rust"
repository = "https://github.com/catppuccin/rust"
license = "MIT"
keywords = ["catppuccin", "palette", "color", "colorscheme", "theme"]

[package.metadata.docs.rs]
features = ["ansi-term", "bevy", "css-colors", "iced", "ratatui", "serde"]

[lints]
rust.missing_docs = "warn"
clippy.all = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"

[dependencies]
ansi_term = { version = "0.12", optional = true }
bevy = { version = "0.17", default-features = false, optional = true }
css-colors = { version = "1.0", optional = true }
iced = { version = "0.13.1", optional = true }
ratatui = { version = "0.29", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
itertools = "0.14"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "2.0"

[dev-dependencies]
crossterm = "0.29"
serde_json = "1.0"

[features]
ansi-term = ["dep:ansi_term"]
bevy = ["bevy/bevy_color"]
bevy-full = ["bevy/default"]
css-colors = ["dep:css-colors"]
iced = ["dep:iced"]
ratatui = ["dep:ratatui"]
serde = ["dep:serde"]

[[example]]
name = "term_grid"
required-features = ["ansi-term"]

[[example]]
name = "bevy"
required-features = ["bevy-full"]

[[example]]
name = "css"
required-features = ["css-colors"]

[[example]]
name = "iced"
required-features = ["iced"]

[[example]]
name = "ratatui"
required-features = ["ratatui"]

[[example]]
name = "serde"
required-features = ["serde"]
